--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -2,8 +2,8 @@
 
 
 body {
-	font-family: Lato, sans-serif;
-	font-size: 18px;
+	font-family: $font-family-base;
+	font-size: $font-size;
 }
 
 .container{
@@ -11,16 +11,25 @@ body {
 	margin: 2em auto;
 	text-align: justify;
 	position: relative;
+
+	&:before{
+		display: block;
+		text-align: center;
+		font-weight: bolder;
+		font-size: .5em;
+		margin: 0 0 1em 0;
+		content: "Mobile First";
+		color: fuchsia;
+	}
 }
 
-.container:before{
-	display: block;
-	text-align: center;
-	font-weight: bolder;
-	font-size: .5em;
-	margin: 0 0 1em 0;
-	content: "Mobile First";
-	color: fuchsia;
+a{
+	color: $color-link;
+	text-decoration: none;
+	&:hover{
+		color: darken($color-link, 30%);
+		text-decoration: underline;
+	}
 }
 
 img{
@@ -40,7 +49,6 @@ p{
 	max-width: 320px;
 	margin: 1em auto;
 	position: relative;
-	background-color: gray;
 }
 
 .block{
@@ -51,31 +59,29 @@ p{
 	mix-blend-mode: screen;
 	transition: all .31s ease;
 	text-align: center;
-}
 
-.block:hover{
-	width: 150px;
-	height: 150px;
-}
+	&:hover{
+		width: 150px;
+		height: 150px;
+	}
 
-.block > span{
-	display: block;
-	margin: 1em;
-}
+	> span{
+		display: block;
+		margin: 1em;
+	}
 
-.block:nth-child(1){
-	left: 0;
-	background-color: #FF0000;
-	
-}
-.block:nth-child(2){
-	left: 30;
-	bottom: -156;
-	background-color: #00FF00;
-}
-.block:nth-child(3){
-	left: 60;
-	background-color: #0000FF;
-}
+	&:nth-child(1){
+		left: 0;
+		background-color: #FF0000;
 
-
+	}
+	&:nth-child(2){
+		left: 30;
+		bottom: -156;
+		background-color: #00FF00;
+	}
+	&:nth-child(3){
+		left: 60;
+		background-color: #0000FF;
+	}
+}
