--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -7,20 +7,9 @@ body {
 }
 
 .container{
-	width: 80%;
-	margin: 2em auto;
-	text-align: justify;
+	margin: $sp auto;
+	padding: $sp;
 	position: relative;
-
-	&:before{
-		display: block;
-		text-align: center;
-		font-weight: bolder;
-		font-size: .5em;
-		margin: 0 0 1em 0;
-		content: "Mobile First";
-		color: fuchsia;
-	}
 }
 
 a{
@@ -32,56 +21,34 @@ a{
 	}
 }
 
-img{
-	width: 100%;
-	height: auto;
-	margin:  1em 0;
-	clear: left;
-}
+.wrapper{
+	display: flex;
+	flex-direction: row;
+ 
+	a.thumb{
+		display: flex-item;
+		position: relative;
+		width: 50%;
+		min-height: 100px;
+		overflow: hidden;
+		text-align: center;
 
-p{
-	line-height: 1.2em;
-	font-size: .9em;
-	hyphens: auto;
-}
+		img{
+			height: auto;
+		}
 
-.wrap{
-	max-width: 320px;
-	margin: 1em auto;
-	position: relative;
-}
-
-.block{
-	position: absolute;
-	width: 100px;
-	height: 100px;
-	border-radius: 50%;
-	mix-blend-mode: screen;
-	transition: all .31s ease;
-	text-align: center;
-
-	&:hover{
-		width: 150px;
-		height: 150px;
-	}
-
-	> span{
-		display: block;
-		margin: 1em;
-	}
-
-	&:nth-child(1){
-		left: 0;
-		background-color: #FF0000;
-
-	}
-	&:nth-child(2){
-		left: 30;
-		bottom: -156;
-		background-color: #00FF00;
-	}
-	&:nth-child(3){
-		left: 60;
-		background-color: #0000FF;
+		.overlay{
+			position: absolute;
+			background-color: transparentize($color-bg, .3);
+			bottom: 0;
+			left: 0;
+			right: 0;
+			padding: 9px;
+			font-weight: 700;
+			color: $color-fg;
+			text-align: center;
+			text-transform: uppercase;
+		}
 	}
 }
+
