--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -33,13 +33,17 @@ a{
 		display: flex-item;
 		position: relative;
 		width: 50%;
+		min-width: 45%;
 		height: 150px;
 		overflow: hidden;
 		text-align: center;
 		margin: $sp;
 		
 		img{
-			
+			display: block;
+		    margin-left: auto;
+		    margin-right: auto;
+		    vertical-align: middle;
 		}
 
 		.overlay{
